// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransformOktaVerifyEnrollChannel Tests should append email input field to elements list when email is the selectedChannel 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.okta_verify.enroll.channel.email.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "email",
          },
        },
        "type": "Field",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.enroll.okta_verify.enroll.channel.email.subtitle",
        },
        "type": "Description",
      },
      {
        "label": "oie.enroll.okta_verify.setupLink",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "content": "oie.enroll.okta_verify.switch.channel.link.text",
          "contentClassname": "switch-channel-link",
          "step": "select-enrollment-channel",
          "stepToRender": "select-enrollment-channel",
        },
        "type": "TextWithActionLink",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyEnrollChannel Tests should append phone input field to elements list when sms is the selectedChannel 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.okta_verify.enroll.channel.sms.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "phoneNumber",
          },
        },
        "type": "Field",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.enroll.okta_verify.channel.sms.description.updated",
        },
        "type": "Description",
      },
      {
        "label": "oie.enroll.okta_verify.setupLink",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "content": "oie.enroll.okta_verify.switch.channel.link.text",
          "contentClassname": "switch-channel-link",
          "step": "select-enrollment-channel",
          "stepToRender": "select-enrollment-channel",
        },
        "type": "TextWithActionLink",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
